--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
     <link href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-    <link rel="shortcut icon" href="/img/favicon.ico?v=1.0" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ "/img/favicon.ico?v=1.0" | prepend: site.baseurl }}" type="image/x-icon">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
