--- a/_includes/see-it-in-action.html
+++ b/_includes/see-it-in-action.html
@@ -3,7 +3,8 @@
         <div class="row">
             <div id="see-it-in-action" class="col-lg-8 col-lg-offset-2">
                 <h1>See it in action</h1>
-                <img src="/img/ngi_example.gif" />
+                <img src="{{ "/img/ngi_example.gif" | prepend: site.baseurl }}" />
+                
                 <br><br><br><br>
 {% highlight javascript %}
 /*
