fixed responsive layout

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,8 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <span class="light">ngi</span>
+                    <!--<span class="light">ngi</span>-->
+                    <img class="example" src="{{ "/img/favicon.ico" | prepend: site.baseurl }}" />
                 </a>
             </div>
 
