--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@ $primary-dark: #000000;
 @import
 		"mixins",
 		"base",
+		"components",
 		"syntax-highlighting",
         "bootstrap.min",
         "grayscale"
