fixed install instr

--- a/_includes/install.html
+++ b/_includes/install.html
@@ -17,7 +17,7 @@
                     </p>
                     {% highlight bash %}$ git clone https://github.com/joshbeam/angular_init.git usr/local/ngi{% endhighlight %}
                     <br>
-                    {% highlight bash %}$ 'export PATH="/usr/local/ngi/bin:$PATH"' >> ~/.bash_profile{% endhighlight %}
+                    {% highlight bash %}$ echo 'export PATH="/usr/local/ngi/bin:$PATH"' >> ~/.bash_profile{% endhighlight %}
                     <br>
                     <h3>Permission error?</h3>
                     <pre>/ $ cd usr/local/ngi/bin
