--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,18 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Josh Beam 20{{ site.time | date: '%y' }}</p>
-            <p>Thanks <a href="http://ironsummitmedia.github.io/startbootstrap-grayscale/">Grayscale</a> :)</a>
+            <p>
+              Copyright &copy; Josh Beam 20{{ site.time | date: '%y' }} (<a href="https://raw.githubusercontent.com/joshbeam/angular_init/master/LICENSE.txt">MIT License</a>)
+              <br><br>
+            </p>
+
+            <p>
+              <small>Thanks <a href="http://ironsummitmedia.github.io/startbootstrap-grayscale/">Grayscale</a> :)</small>
+            </p>
+
+
+            <p>
+              <small>angular_init and ngi and the author, Joshua Beam, are not directly associated with <a href="http://angularjs.org">AngularJS</a></small>
+            </p>
         </div>
     </footer>
