--- a/_includes/use.html
+++ b/_includes/use.html
@@ -14,6 +14,15 @@
 ~/MyAwesomeApp $ ngi routes # => a config block with $routeProvider injected
 ~/MyAwesomeApp $ ngi module # => module (you can inject dependencies too)
 ~/MyAwesomeApp $ ngi filter # => filter
+
+# or
+
+~/MyAwesomeApp $ ngi index # => an index page in HTML
+
+# or
+
+# use either --options or -o
+~/MyAwesomeApp $ ngi --options # => choose your language to use (CoffeeScript or ECMAScript5)
 {% endhighlight %}
             </div>
         </div>
