--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,17 +2,18 @@
     <section class="container content-section text-center">
         <div id="about" class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About angular_init</h2>
-                <h3>In simple terms</h3>
+                <h1>About angular_init</h1>
+                <h2>In simple terms</h2>
                 <p>
                 This tool, also called by its short-name <code>ngi</code>, can make (for example) an AngularJS controller template file for you (.js), so that <em>whenever you want to make a new controller for your app, you don't have to type the same starting code over and over again</em> (by the way, this tool doesn't only create controllers. It does directives, filters... almost anything).
                 </p>
-                <h3>Why <code>ngi</code> and not something else?</h3>
+                <h2>Why ngi and not something else?</h2>
                 <p>
-                Good question. You could create your own templates and just copy and paste (but this is cumbersome). There are also all-encompassing scaffolding tools that handle a variety of tasks, like generating templates. But that's like going to a general practice doctor (a huge scaffolding tool), when you know you just need to see the otolaryngologist (angular_init).
+                You could create your own templates and just copy and paste (but this is cumbersome). There are also all-encompassing scaffolding tools that handle a variety of tasks, like generating templates. But that's like going to a general practice doctor, when you know you just need to see the otolaryngologist.
                 </p>
+                <h2>ngi has one task, which makes it lightweight and specialized.</h2> 
                 <p>
-                <em><code>ngi</code> has one task, and one task only, which makes it lightweight and specialized.</em> Most AngularJS developers are probably using the command line already (Gulp, Bower, NPM, Git, etc.), so why not use the command line to streamline your code-writing too?
+                Most AngularJS developers are probably using the command line already (Gulp, Bower, NPM, Git, etc.), so why not use the command line to streamline your code-writing too?
                 </p>         
             </div>
         </div>
