--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">angular_init</h1>
-                        <p class="intro-text">Type less, write more AngularJS! Use <code>ngi</code>, the simple template generator.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <h1 class="brand-heading">ngi</h1>
+                        <p class="intro-text">
+                            Speed up AngularJS development by creating templates for all your components from the command line.
+                            
+{% highlight bash %}
+$ gem install ngi # => installs current version, 0.2.2
+$ ngi controller # => makes a controller for your app
+{% endhighlight %}
+                        </p>
+                        <h1>See it in action</h1>
+                        <a href="#see-it-in-action" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
