--- a/_includes/install.html
+++ b/_includes/install.html
@@ -2,27 +2,38 @@
     <section class="content-section text-center">
         <div id="install" class="download-section">
             <div class="container">
-                <h1>Install</h1>
-                <div class="col-lg-5">
-                    <h2>GitHub</h2>
-                    <p>
-                        Head over to the repo for in-depth instructions.
-                    </p>
-                    <a href="https://github.com/joshbeam/angular_init#installation-in-2-steps" class="btn btn-default btn-lg">Installation (in 2 steps) &raquo;</a>
-                </div>
-                <div class="col-lg-7">
-                    <h2>Terminal</h2>
-                    <p>
-                        Make sure you're in your top-level directory (in Mac, that'll be <code>/</code>, and Windows <code>C:</code>)
-                    </p>
-                    {% highlight bash %}$ git clone https://github.com/joshbeam/angular_init.git usr/local/ngi{% endhighlight %}
-                    <br>
-                    {% highlight bash %}$ echo 'export PATH="/usr/local/ngi/bin:$PATH"' >> ~/.bash_profile{% endhighlight %}
-                    <br>
-                    <h3>Permission error?</h3>
-                    <pre>/ $ cd usr/local/ngi/bin
-                        <br>
-/usr/local/ngi/bin $ chmod 755 ngi</pre>
+                <div class="row">
+                    <h1>Install</h1>
+                    <div class="col-lg-8 col-lg-offset-2">
+<p>
+<strong>Add this line to your application's Gemfile:</strong>
+
+<pre>gem 'ngi'</pre>
+</p>
+
+<p>
+<strong>And then execute:</strong>
+<pre>$ bundle</pre>
+</p>
+
+<p>
+<strong>Or install it yourself as:</strong>
+
+<pre>$ gem install ngi</pre>  
+</p>
+
+<a href="https://rubygems.org/gems/ngi" class="btn btn-default btn-lg">RubyGems</a>
+<a href="https://github.com/joshbeam/angular_init" class="btn btn-default btn-lg">GitHub</a>
+<br><br>
+<a href="http://badge.fury.io/rb/ngi"><img src="https://badge.fury.io/rb/ngi.svg" alt="Gem Version" height="18"></a>
+                        
+                        <p>
+                            <br><br>
+                            <small>
+                                <strong>Dependencies</strong> <a href="https://www.ruby-lang.org/en/downloads/">Ruby 2.1</a> and <a href="https://rubygems.org/pages/download">RubyGems <span id="gem-couter"></span></a> (optional <a href="http://bundler.io/">Bundler</a>)
+                            </small>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
