--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
                             Speed up AngularJS development by creating templates for all your components from the command line.
                             
 {% highlight bash %}
-$ gem install ngi # => installs current version, 0.2.2
+$ gem install ngi # => installs current version, 0.2.x
+$ cd ~/MyAwesomeApp # => goes to your project
 $ ngi controller # => makes a controller for your app
 {% endhighlight %}
                         </p>
