--- a/_includes/install.html
+++ b/_includes/install.html
@@ -30,7 +30,7 @@
                         <p>
                             <br><br>
                             <small>
-                                <strong>Dependencies</strong> <a href="https://www.ruby-lang.org/en/downloads/">Ruby 2.1</a> and <a href="https://rubygems.org/pages/download">RubyGems <span id="gem-couter"></span></a> (optional <a href="http://bundler.io/">Bundler</a>)
+                                You need <a href="https://www.ruby-lang.org/en/downloads/">Ruby 2.1</a> and <a href="https://rubygems.org/pages/download">RubyGems <span id="gem-couter"></span></a> (optional <a href="http://bundler.io/">Bundler</a>)
                             </small>
                         </p>
                     </div>
