--- a/_includes/use.html
+++ b/_includes/use.html
@@ -24,6 +24,12 @@
 # use either --options or -o
 ~/MyAwesomeApp $ ngi --options # => choose your language to use (CoffeeScript or ECMAScript5)
 {% endhighlight %}
+              <p>
+                By default, ngi uses default templates that follow <a href="https://github.com/johnpapa/angular-styleguide">John Papa's AngularJS style guide</a>.
+              </p>
+              <p>
+                You can also use your own custom templates. Check out the <a href="https://github.com/joshbeam/angular_init/blob/master/TUTORIAL.md">tutorial on ngi's GitHub page</a>.
+              </p>
             </div>
         </div>
     </section>
