--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,20 +1,14 @@
     <!-- About Section -->
-    <section class="container content-section text-center">
-        <div id="about" class="row">
+    <section id="about" class="container content-section text-center">
+        <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1>About angular_init</h1>
-                <h2>In simple terms</h2>
+                <h1>About</h1>
                 <p>
-                This tool, also called by its short-name <code>ngi</code>, can make (for example) an AngularJS controller template file for you (.js), so that <em>whenever you want to make a new controller for your app, you don't have to type the same starting code over and over again</em> (by the way, this tool doesn't only create controllers. It does directives, filters... almost anything).
+                    angular_init (called <code>ngi</code>) creates AngularJS templates for you from the command line <strong>so you don't have to type the same starting code over and over again</strong>. It's a tool with just one purpose, so it's small and fast.
                 </p>
-                <h2>Why ngi and not something else?</h2>
                 <p>
-                You could create your own templates and just copy and paste (but this is cumbersome). There are also all-encompassing scaffolding tools that handle a variety of tasks, like generating templates. But that's like going to a general practice doctor, when you know you just need to see the otolaryngologist.
+                    Most developers are probably using the command line anyways in their normal workflow, so why not also create AngularJS code from the command line?
                 </p>
-                <h2>ngi has one task, which makes it lightweight and specialized.</h2> 
-                <p>
-                Most AngularJS developers are probably using the command line already (Gulp, Bower, NPM, Git, etc.), so why not use the command line to streamline your code-writing too?
-                </p>         
             </div>
         </div>
     </section>
