--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,25 +1,13 @@
-    <!-- Intro Header -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">ngi</h1>
-                        <p class="intro-text">
-                            Speed up AngularJS development by creating templates for all your components from the command line.
+<header id="intro">
+    <h1>ngi</h1>
+
+    <p class="big-paragraph">
+        Speed up AngularJS development by creating templates for all your components from the command line.
+    </p>
                             
 {% highlight bash %}
 $ gem install ngi # => installs current version, 0.3.x
 $ cd ~/MyAwesomeApp # => goes to your project
 $ ngi controller # => makes a controller for your app
 {% endhighlight %}
-                        </p>
-                        <h1>See it in action</h1>
-                        <a href="#see-it-in-action" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+</header>
