--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,41 +1,11 @@
- <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <!--<span class="light">ngi</span>-->
-                    <img class="example" src="{{ "/img/favicon.ico" | prepend: site.baseurl }}" />
-                </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#see-it-in-action">In Action</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#use">Use</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#install">Install</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+<nav role="navigation">
+    <header>
+        <h2>ngi</h2>
+        <h4>The AngularJS template generator</h4>
+    </header>
+    <ul>
+        <li><a href="#see-it-in-action">See it in action</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#use">Use</a></li>
+    </ul>
+</nav>
