--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     {% include head.html %}
-    <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-    {% include nav.html %}
-    {% include header.html %}
-    {% include see-it-in-action.html %}
-    {% include about.html %}
-    {% include use.html %}
-    {% include install.html %}
-    {% include contact.html %}
-    {% include footer.html %}
-    {% include js.html %}
+    <body>
+        {% include nav.html %}
+        <main>
+            {% include header.html %}
+            {% include see-it-in-action.html %}
+            {% include about.html %}
+        </main>
     </body>
 </html>
