--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,14 +1,12 @@
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h1>About</h1>
-                <p>
-                    angular_init (called <code>ngi</code>) creates AngularJS templates for you from the command line <strong>so you don't have to type the same starting code over and over again</strong>. It's a tool with just one purpose, so it's small and fast.
-                </p>
-                <p>
-                    Most developers are probably using the command line anyways in their normal workflow, so why not also create AngularJS code from the command line?
-                </p>
-            </div>
-        </div>
-    </section>
+<section id="about" class="container content-section text-center">
+    <h1>About</h1>
+    <p class="big-paragraph">
+        angular_init (called <code>ngi</code>) creates AngularJS templates for you from the command line <strong>so you don't have to type the same starting code over and over again</strong>. It's a tool with just one purpose, so it's small and fast.
+    </p>
+    <p class="big-paragraph">
+        …
+    </p>
+    <p class="big-paragraph">
+        Most developers are probably using the command line anyways in their normal workflow, so why not also create AngularJS code from the command line?
+    </p>
+</section>
