--- a/_includes/see-it-in-action.html
+++ b/_includes/see-it-in-action.html
@@ -1,11 +1,6 @@
-    <!-- See It In Action Section -->
-    <section class="container content-section text-center">
-        <div class="row">
-            <div id="see-it-in-action" class="col-lg-8 col-lg-offset-2">
-                <h1>See it in action</h1>
-                <img class="example" src="{{ "/img/ngi_example.gif" | prepend: site.baseurl }}" />
-                
-                <br><br><br><br>
+<section id="see-it-in-action">
+    <h1>See it in action</h1>
+    <img class="example" src="{{ "/img/ngi_example.gif" | prepend: site.baseurl }}">
 {% highlight javascript %}
 ;(function(app) {
 
@@ -21,6 +16,4 @@
 
 })(angular.module('myModule'));
 {% endhighlight %}
-            </div>
-        </div>
-    </section>
+</section>
