--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -1,20 +1,127 @@
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-
 img {
 	&.example {
-		@include media-query(530px) {
+		@include media-query($tablet) {
 			width: 95%;
 		}
 	}
 }
 
-section {
-  img {
-    box-shadow: 0px 0px 200px #aaa;
+.big-paragraph {
+  text-align: center;
+  font-size: 2rem;
+  color: $medium-gray;
+
+  @include media-query($tablet) {
+    font-size: 1.25rem;
+  }
+}
+
+#intro {
+
+  h1 {
+    text-align: center;
+  }
+}
+
+main {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  width: 80%;
+  padding: 1rem;
+
+  section,
+  header {
+    padding: 2rem;
+    margin-bottom: 1rem;
+
+    border: 1px solid $extra-light-gray;
+    border-bottom: 1px solid $brand-comp;
+    @include box-shadow(0, 0, 30px, $light-gray);
+  }
+
+  section {
+    h1 {
+      text-align: center;
+      margin: 2rem;
+    }
+
+    img {
+      box-shadow: 0px 0px 100px $dark-gray;
+      display: block;
+      margin: 4rem auto;
+    }
+  }
+
+  @include media-query($tablet) {
+    width: 100%;
+    margin-top: 5rem;
+  }
+}
+
+nav {
+  background: $extra-light-gray;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+
+  height: 100%;
+  width: 20%;
+
+  header {
+    h2 {
+      padding: 0;
+      margin: 1rem;
+    }
+
+    h4 {
+      color: $light-gray;
+      font-weight: normal;
+      padding: 0;
+      margin: 1rem;
+    }
+  }
+
+  ul {
+    padding-left: 0;
+    list-style-type: none;
+
+    li {
+      padding: 0;
+      border-bottom: 1px solid $light-gray;
+
+      &:first-child {
+        border-top: 1px solid $light-gray;
+      }
+
+      a {
+        display: block;
+        padding: 1rem;
+        transition: background-color 250ms ease;
+        font-family: Helvetica;
+
+        &:hover {
+          background: $light-gray;
+        }
+      }
+    }
+  }
+
+  @include media-query($tablet) {
+    position: sticky;
+
+    height: auto;
+    width: 100%;
+
+    header h4 {
+      display: none;
+    }
+
+    ul {
+      display: none;
+    }
   }
 }
