--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,11 @@
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>
-              Copyright &copy; Josh Beam 20{{ site.time | date: '%y' }} (<a href="https://raw.githubusercontent.com/joshbeam/angular_init/master/LICENSE.txt">MIT License</a>)
-              <br><br>
-            </p>
+<footer>
+  <p class="big-paragraph">
+    Copyright &copy; Josh Beam 20{{ site.time | date: '%y' }} (<a href="https://raw.githubusercontent.com/joshbeam/angular_init/master/LICENSE.txt">MIT License</a>)
+  </p>
 
-            <p>
-              <small>Thanks <a href="http://ironsummitmedia.github.io/startbootstrap-grayscale/">Grayscale</a> :)</small>
-            </p>
-
-
-            <p>
-              <small>angular_init and ngi and the author, Joshua Beam, are not directly associated with <a href="http://angularjs.org">AngularJS</a></small>
-            </p>
-        </div>
-    </footer>
+  <p class="center">
+    <small>
+      angular_init and ngi and the author, Joshua Beam, are not directly associated with <a href="http://angularjs.org">AngularJS</a>
+    </small>
+  </p>
+</footer>
