--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,8 @@
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <link rel="shortcut icon" href="{{ "/img/favicon.ico?v=1.0" | prepend: site.baseurl }}" type="image/x-icon">
+
+    <!--[if lt IE 9]>
+        <script src="{{ "bower_components/html5shiv/dist/html5shiv.js" | prepend: site.baseurl }}"></script>
+    <![endif]-->
 </head>
