--- a/_includes/use.html
+++ b/_includes/use.html
@@ -1,8 +1,5 @@
-    <!-- See It In Action Section -->
-    <section id="use" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h1>Use</h1>
+<section id="use">
+  <h1>Use</h1>
 {% highlight bash %}
 ~/MyAwesomeApp $ ngi controller # => controller
 ~/MyAwesomeApp $ ngi directive # => directive
@@ -24,12 +21,10 @@
 # use either --options or -o
 ~/MyAwesomeApp $ ngi --options # => choose your language to use (CoffeeScript or ECMAScript5)
 {% endhighlight %}
-              <p>
-                By default, ngi uses default templates that follow <a href="https://github.com/johnpapa/angular-styleguide">John Papa's AngularJS style guide</a>.
-              </p>
-              <p>
-                You can also use your own custom templates. Check out the <a href="https://github.com/joshbeam/angular_init/blob/master/TUTORIAL.md">tutorial on ngi's GitHub page</a>.
-              </p>
-            </div>
-        </div>
-    </section>
+  <p class="big-paragraph">
+    By default, ngi uses default templates that follow <a href="https://github.com/johnpapa/angular-styleguide">John Papa's AngularJS style guide</a>.
+  </p>
+  <p class="big-paragraph">
+    You can also use your own custom templates. Check out the <a href="https://github.com/joshbeam/angular_init/blob/master/TUTORIAL.md">tutorial on ngi's GitHub page</a>.
+  </p>
+</section>
