--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,17 @@
 <html lang="en">
     {% include head.html %}
     <body>
+        <div class="black-out"></div>
         {% include nav.html %}
         <main>
             {% include header.html %}
             {% include see-it-in-action.html %}
             {% include about.html %}
+            {% include use.html %}
+            {% include install.html %}
+            {% include contact.html %}
+            {% include footer.html %}
         </main>
+        {% include js.html %}
     </body>
 </html>
