--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,21 +1,23 @@
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact</h2>
-                <p>Questions, issues, feature requests?</p>
-                <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
-                </p>
-                <p>
-                    <a href="{{ site.footer }}">Front End Collision</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    {% for network in site.social %}
-                    <li>
-                        <a href="{{ network.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name">{{ network.title | remove: '-' }}</span></a>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
-    </section>
+<section id="contact">
+  <h1>Contact</h1>
+
+  <p class="big-paragraph">
+    My name is Josh Beam. Here's my <a href="{{ site.url }}">website</a>.
+  </p>
+
+  <p class="big-paragraph">
+    Questions, issues, feature requests?
+    <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+  </p>
+
+  <ul class="inline-list" id="social-media">
+      {% for network in site.social %}
+      <li>
+          <a href="{{ network.url }}">
+            <i class="fa fa-{{ network.title }} fa-fw"></i>
+            <span class="network-name">{{ network.title | remove: '-' }}</span>
+          </a>
+      </li>
+      {% endfor %}
+  </ul>
+</section>
