--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -16,10 +16,39 @@ img {
   }
 }
 
-#intro {
+.black-out {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
 
+  background: #000;
+  background: rgba(0, 0, 0, 0.75);
+
+  &.hidden {
+    display: none;
+  }
+}
+
+.center {
+  text-align: center;
+}
+
+#intro {
   h1 {
     text-align: center;
+  }
+}
+
+.inline-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    display: inline-block;
   }
 }
 
@@ -32,7 +61,8 @@ main {
   padding: 1rem;
 
   section,
-  header {
+  header,
+  footer {
     padding: 2rem;
     margin-bottom: 1rem;
 
@@ -57,6 +87,24 @@ main {
   @include media-query($tablet) {
     width: 100%;
     margin-top: 5rem;
+  }
+}
+
+.menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  width: 36px;
+  height: 26px;
+  line-height: 0;
+  text-align: center;
+
+  > svg {
+      width: 18px;
+      height: 15px;
+
+      path {
+          fill: $dark-gray;
+      }
   }
 }
 
@@ -85,6 +133,12 @@ nav {
     }
   }
 
+  &.drawer-out {
+    width: 75%;
+    @include box-shadow(0, 0, 100px, #000);
+    display: block;
+  }
+
   ul {
     padding-left: 0;
     list-style-type: none;
@@ -103,6 +157,10 @@ nav {
         transition: background-color 250ms ease;
         font-family: Helvetica;
 
+        &.active {
+          background: $light-gray;
+        }
+
         &:hover {
           background: $light-gray;
         }
@@ -111,17 +169,35 @@ nav {
   }
 
   @include media-query($tablet) {
-    position: sticky;
-
-    height: auto;
-    width: 100%;
-
-    header h4 {
-      display: none;
-    }
-
-    ul {
-      display: none;
-    }
+    display: none;
   }
+}
+
+.sticky-header {
+  display: none;
+
+  background: $extra-light-gray;
+  @include box-shadow(0, 0, 10px, $dark-gray);
+
+  width: 100%;
+  padding: 1rem;
+
+  h2 {
+    padding: 0;
+    margin: .5rem;
+    display: inline;
+  }
+
+  @include media-query($tablet) {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: 9;
+  }
+}
+
+#social-media {
+  font-size: 1.5rem;
+  text-align: center;
 }
