--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 <footer>
-  <p class="big-paragraph">
-    Copyright &copy; Josh Beam 20{{ site.time | date: '%y' }} (<a href="https://raw.githubusercontent.com/joshbeam/angular_init/master/LICENSE.txt">MIT License</a>)
+  <p class="center">
+    <small>
+      Copyright &copy; Josh Beam 20{{ site.time | date: '%y' }} (<a href="https://raw.githubusercontent.com/joshbeam/angular_init/master/LICENSE.txt">MIT License</a>)
+    </small>
   </p>
 
   <p class="center">
