--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -34,6 +34,7 @@ p {
 pre {
   font-size: 1.5rem;
 	text-align: left;
+  line-height: 2rem;
 	overflow: scroll;
 
   padding: 1rem;
@@ -44,4 +45,8 @@ pre {
 
   background: $extra-light-gray;
   color: $dark-gray;
+
+  @include media-query($tablet) {
+    width: 95%;
+  }
 }
