--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -71,7 +71,9 @@ main {
     @include box-shadow(0, 0, 30px, $light-gray);
   }
 
-  section {
+  section,
+  header,
+  footer {
     h1 {
       text-align: center;
       margin: 2rem;
@@ -82,11 +84,16 @@ main {
       display: block;
       margin: 4rem auto;
     }
+
+    @include media-query($tablet) {
+      padding: .25rem .25rem 2rem .25rem;
+    }
   }
 
   @include media-query($tablet) {
     width: 100%;
-    margin-top: 5rem;
+    margin-top: 2rem;
+    padding: 0;
   }
 }
 
@@ -118,6 +125,7 @@ nav {
 
   height: 100%;
   width: 20%;
+  overflow: auto;
 
   header {
     h2 {
@@ -180,9 +188,9 @@ nav {
   @include box-shadow(0, 0, 10px, $dark-gray);
 
   width: 100%;
-  padding: 1rem;
+  padding: .25rem;
 
-  h2 {
+  h3 {
     padding: 0;
     margin: .5rem;
     display: inline;
